conformance/tests/tlsroute-listener-terminate-not-supported.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-tlsroute-terminate-unsupported
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: tls-terminate
      port: 8443
      protocol: TLS
      hostname: terminate.example.com
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TLSRoute
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-terminate-checks-certificate
